# openapi-gen

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  openapi.json
examples/middleware/: Cargo.toml  README.md
examples/middleware/src/: main.rs
examples/param_structs/: Cargo.toml  README.md
examples/param_structs/src/: main.rs
examples/petstore/: Cargo.toml  README.md
examples/petstore/src/: main.rs
src/: lib.rs
src/codegen/: mod.rs  params.rs  types.rs
src/generator/: client.rs  docs.rs  errors.rs  methods.rs  mod.rs  param_structs.rs  structs.rs
src/parser/: input.rs  loader.rs  mod.rs  spec.rs
src/utils/: keywords.rs  mod.rs
tests/: array_parameters.rs  blocking_feature.rs  client_name.rs  comprehensive_docs.rs  documentation.rs  feature_validation.rs  keyword_handling.rs  middleware_feature.rs  optional_parameters.rs  param_structs.rs  param_structs_backward_compatibility.rs  petstore.rs  syntax_parsing.rs  test_struct_attrs.rs
