[package]
name = "openapi-gen"
version = "0.3.0"
edition = "2024"
description = "Rust macro to generate client from OpenAPI spec."
license = "MIT" 
authors = ["Paul van der Meijs"]
repository = "https://github.com/paulvandermeijs/openapi-gen"
keywords = ["openapi", "api-client", "generator"]


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
thiserror = "1.0"
openapiv3 = "2.0"
serde_yaml = "0.9"
heck = "0.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
