[package]
name = "openapi-gen"
version = "0.3.1"
edition = "2024"
description = "Rust macro to generate client from OpenAPI spec."
license = "MIT" 
authors = ["Paul van der Meijs"]
repository = "https://github.com/paulvandermeijs/openapi-gen"
keywords = ["openapi", "api-client", "generator"]


[lib]
proc-macro = true

[features]
default = []
middleware = ["reqwest-middleware", "async-trait"]
blocking = ["reqwest/blocking"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
thiserror = "1.0"
openapiv3 = "2.2"
serde_yaml = "0.9"
heck = "0.5"
reqwest-middleware = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
