[package]
name = "middleware-example"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi-gen = { path = "../..", features = ["middleware"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"