[package]
name = "petstore-example"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi-gen = { path = "../.." }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"